# placeholder-query

./: Cargo.toml  docker-compose.yaml
crates/placeholder_query_builder/: Cargo.toml
crates/placeholder_query_builder/src/: lib.rs  value.rs
crates/placeholder_query_postgres/: Cargo.toml
crates/placeholder_query_postgres/src/: lib.rs
crates/placeholder_query_postgres_driver/: Cargo.toml
crates/placeholder_query_postgres_driver/src/: lib.rs
crates/placeholder_query_postgres_driver/tests/: api_example.rs  postgres_executor.rs
crates/placeholder_query_postgres_driver/tests/api_example/: model.rs
query-core/: Cargo.toml
query-core/src/: backend.rs  column.rs  ident.rs  lib.rs  projection.rs  table.rs  value.rs
query-core/src/expr/: column_ref.rs  expr.rs  ident.rs  mod.rs
query-postgres/: Cargo.toml
query-postgres/src/: backend.rs  fetch.rs  lib.rs  statement.rs  utils.rs  value.rs
query-postgres/src/query/: column.rs  expr.rs  mod.rs  operator.rs  projection.rs  table.rs
query-postgres/tests/: api_example.rs
query-postgres/tests/api_example/: backend.rs  model.rs
runtime/: Cargo.toml
runtime/benches/: fetch_runtime.rs
runtime/src/: batch.rs  lib.rs
runtime/tests/: fetch_runtime.rs
src/: batch.rs  column.rs  executor.rs  fetch.rs  lib.rs  projection.rs  table.rs  utils.rs
src/expr/: expr.rs  ident.rs  mod.rs
tests/: api_example.rs  postgres_executor.rs
tests/api_example/: model.rs
tokio-postgres/: Cargo.toml
tokio-postgres/src/: lib.rs
tokio-postgres/tests/: api_example.rs
tokio-postgres/tests/api_example/: model.rs
(+23 files in other folders)
