[package]
name = "placeholder-query-tokio-postgres"
version = "0.1.0"
edition = "2024"

[dependencies]
indexmap = "2.14.0"
placeholder-query-core = { path = "../query-core" }
placeholder-query-postgres = { path = "../query-postgres" }
placeholder-query-runtime = { path = "../runtime" }
tokio-postgres = "0.7.17"

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
